# dumbo-esse3

./: README.md  dumbo_esse3_cli.py  pyproject.toml
dumbo_esse3/: cli.py  esse3_wrapper.py  primitives.py
tests/: test_environment.py
tests/dumbo_esse3/: test_cli.py  test_esse3_wrapper.py  test_primitives.py
tests/dumbo_esse3/utils/: mocks.py
tests/dumbo_esse3/utils/html/: add_exam_cod.html  committee_details.html  committee_list.html  committee_part.html  committee_parts.html  course_list.html  exam_cod_details.html  exams_cod.html  exams_cod_2.html  graduation_day_list.html  graduation_day_lm.html  graduation_day_lm_student_1.html  login.html  logout.html  register_ae_add_activity.html  register_ae_delete_activity.html  register_ae_empty.html  register_ae_nonempty.html  register_cod.html  registers.html  theses.html  theses_present.html  theses_sign.html  theses_signed.html
utils/: primitives.py
