[tool.poetry]
name = "dumbo-esse3"
version = "0.4.11"
description = "Esse3 command line utility, to save my future time!"
authors = ["Mario Alviano <mario.alviano@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
dateutils = "^0.6.12"
dumbo-utils = "^0.1.4"
lxml = "^6.0.1"
selenium = "^4.4.3"

[tool.poetry.group.dev.dependencies]
coverage = "^7.3.2"
freezegun = "^1.2.2"
pytest = "^7.2.0"
pytest-localserver = "^0.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

